feat: using api add labels to note
