# swagger/swagger.json
@@ -405,11 +405,7 @@
                     "name": "labelId",
                     "in": "path",
                     "required": true,
-                    "type": "string",
-            
-                    "schema": {
-                        "$ref": "#/definitions/Label"
-                    }
+                    "type": "string"
                 }],
                 "responses": {
                     "200": {
